添加新backbone与对应configs，修改readme（拆分学习记录），优化register

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,10 @@
 # Ignore all pycache files
 __pycache__/
 # ignore output files
-output/
+outpu*/
 save_model/
 test_output/
+*.log
 
 mask2former/data/
 mask2former/modeling/pixel_decoder/ops/
