--- a/configs/kvasir_seg/MaskFormer2_R50_galerkin.yaml
+++ b/configs/kvasir_seg/MaskFormer2_R50_galerkin.yaml
@@ -1,10 +1,10 @@
 _BASE_: Base-Kvasir-SEG-SemanticSegmentation.yaml
-OUTPUT_DIR: "output_galerkin/" # 指定输出路径
+OUTPUT_DIR: "output_galerkin_trained/" # 指定输出路径
 MODEL:
   BACKBONE:
     NAME: "build_resnet_galerkin_backbone"
   META_ARCHITECTURE: "MaskFormer"
-  # WEIGHTS: "detectron2://ImageNetPretrained/torchvision/R-50.pkl" # 将weights转移到这里
+  WEIGHTS: "detectron2://ImageNetPretrained/torchvision/R-50.pkl" # 将weights转移到这里
   SEM_SEG_HEAD:
     NAME: "MaskFormerHead"
     IGNORE_VALUE: 10 #
