--- a/configs/DRIVE/MaskFormer2_R50_galerkin.yaml
+++ b/configs/DRIVE/MaskFormer2_R50_galerkin.yaml
@@ -1,5 +1,5 @@
-_BASE_: Base-Kvasir-SEG-SemanticSegmentation.yaml
-OUTPUT_DIR: "output_kvasir_galerkin_new_pixel/" # 指定输出路径
+_BASE_: Base-DRIVE-SemanticSegmentation.yaml
+OUTPUT_DIR: "output_DRIVE/" # 指定输出路径
 MODEL:
   BACKBONE:
     NAME: "build_resnet_galerkin_backbone"
@@ -8,7 +8,7 @@ MODEL:
   SEM_SEG_HEAD:
     NAME: "MaskFormerHead"
     IGNORE_VALUE: 10 #
-    NUM_CLASSES: 2  # Only 'polyp' class
+    NUM_CLASSES: 2  # Only 'blood vessel' class
     LOSS_WEIGHT: 1.0
     CONVS_DIM: 256
     MASK_DIM: 256
