--- a/configs/kvasir_seg/swin/maskformer2_swin_large_IN21k_384_bs16_160k.yaml
+++ b/configs/kvasir_seg/swin/maskformer2_swin_large_IN21k_384_bs16_160k.yaml
@@ -1,4 +1,5 @@
 _BASE_: ../MaskFormer2_R50_bs16_160k.yaml
+OUTPUT_DIR: "new_decoder/Swin/" # 指定输出路径
 MODEL:
   BACKBONE:
     NAME: "D2SwinTransformer"
