--- a/configs/kvasir_seg/Base-Kvasir-SEG-SemanticSegmentation.yaml
+++ b/configs/kvasir_seg/Base-Kvasir-SEG-SemanticSegmentation.yaml
@@ -19,7 +19,7 @@ DATASETS:
 SOLVER:
   IMS_PER_BATCH: 16
   BASE_LR: 0.0001
-  MAX_ITER:  100000 # 训练次数160000
+  MAX_ITER:  10000 #0 # 训练次数160000
   WARMUP_FACTOR: 1.0
   WARMUP_ITERS: 0
   WEIGHT_DECAY: 0.05
