--- a/configs/kvasir_seg/MaskFormer2_R50_bs16_160k.yaml
+++ b/configs/kvasir_seg/MaskFormer2_R50_bs16_160k.yaml
@@ -1,5 +1,5 @@
 _BASE_: Base-Kvasir-SEG-SemanticSegmentation.yaml
-OUTPUT_DIR: "new_bridge/resnet/" # 指定输出路径
+OUTPUT_DIR: "out_kvasir_newlabel" #"new_bridge/resnet/" # 指定输出路径
 MODEL:
   META_ARCHITECTURE: "MaskFormer"
   WEIGHTS: "detectron2://ImageNetPretrained/torchvision/R-50.pkl" # 将weights转移到这里
