--- a/configs/Synapse/Base-Synapse-SemanticSegmentation.yaml
+++ b/configs/Synapse/Base-Synapse-SemanticSegmentation.yaml
@@ -15,7 +15,7 @@ MODEL:
     RES5_MULTI_GRID: [1, 1, 1]  # not used
 DATASETS:
   TRAIN: ("Synapse_train",)
-  TEST: ("Synapse_train",)
+  TEST: ("Synapse_test",)
 SOLVER:
   IMS_PER_BATCH: 16
   BASE_LR: 0.0001
