--- a/configs/Synapse/Base-Synapse-SemanticSegmentation.yaml
+++ b/configs/Synapse/Base-Synapse-SemanticSegmentation.yaml
@@ -19,7 +19,7 @@ DATASETS:
 SOLVER:
   IMS_PER_BATCH: 16
   BASE_LR: 0.0001
-  MAX_ITER:  10000 #0 # 训练次数160000
+  MAX_ITER:  100000 # 训练次数160000
   WARMUP_FACTOR: 1.0
   WARMUP_ITERS: 0
   WEIGHT_DECAY: 0.05
@@ -34,7 +34,7 @@ SOLVER:
   AMP:
     ENABLED: True
 INPUT:
-  MIN_SIZE_TRAIN: !!python/object/apply:eval ["[int(x * 0.1 * 512) for x in range(5, 21)]"]
+  MIN_SIZE_TRAIN: !!python/object/apply:eval ["[int(x * 0.1 * 512) for x in range(8, 21)]"]
   MIN_SIZE_TRAIN_SAMPLING: "choice"
   MIN_SIZE_TEST: 512
   MAX_SIZE_TRAIN: 1333
@@ -44,13 +44,13 @@ INPUT:
     TYPE: "absolute"
     SIZE: (512, 512)
     SINGLE_CATEGORY_MAX_AREA: 1.0
-  COLOR_AUG_SSD: True
+  # COLOR_AUG_SSD: True
   SIZE_DIVISIBILITY: 512  # 1024
 
   # IMAGE_SIZE: 512 # 1024
   # MIN_SCALE: 0.1
   # MAX_SCALE: 2.0
-  FORMAT: "RGB"
+  FORMAT: "L"
   DATASET_MAPPER_NAME: "mask_former_semantic"
 TEST:
   EVAL_PERIOD: 5000 # 5000在训练多少次后开始evaluate
