--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -184,11 +184,11 @@
             "console": "integratedTerminal",
             "args": [
                 "--config-file",
-                "configs/Synapse/MaskFormer2_R50_bs16_160k.yaml", // resnet
+                // "configs/Synapse/MaskFormer2_R50_bs16_160k.yaml", // resnet
                 // "configs/DRIVE/MaskFormer2_R50_galerkin.yaml",  //galerkin
-                // "configs/Synapse/swin/maskformer2_swin_large_IN21k_384_bs16_160k.yaml",  //swin
+                "configs/Synapse/swin/maskformer2_swin_large_IN21k_384_bs16_160k.yaml",  //swin
                 "--eval-only", "MODEL.WEIGHTS", 
-                "out_synpase_resnet/model_0004999.pth",
+                "out_Synapse_swin/10w.pth",
             ],
             "env": {
                 "PYTHONPATH": "${workspaceFolder}${pathSeparator}${env:PYTHONPATH}",
@@ -207,13 +207,14 @@
                 "configs/Synapse/swin/maskformer2_swin_large_IN21k_384_bs16_160k.yaml",  //swin
 
                 "--input", 
-                "/home/tangwuyang/Dataset/Synapse/test/images/case0005_slice070.npz",
+                // "/home/tangwuyang/Dataset/Synapse/test/images/case0001_slice095.npz",
+                "/home/tangwuyang/Dataset/Synapse/train/images/case0005_slice070.npz",
                 "--output", 
                 "./test_output/val0.png", 
                 // "./test_output/val2.png", 
                 // "./test_output/train1.png",
                 "--opts", "MODEL.WEIGHTS", 
-                "out_Synapse_swin/model_0004999.pth",  //swin
+                "out_Synapse_swin/10w.pth",  //swin
             ],
             "env": {
                 "PYTHONPATH": "${workspaceFolder}${pathSeparator}${env:PYTHONPATH}",
