--- a/configs/DRIVE/swin/maskformer2_swin_large_IN21k_384_bs16_160k.yaml
+++ b/configs/DRIVE/swin/maskformer2_swin_large_IN21k_384_bs16_160k.yaml
@@ -1,5 +1,5 @@
 _BASE_: ../MaskFormer2_R50_bs16_160k.yaml
-OUTPUT_DIR: "output_DRIVE_swin/" # 指定输出路径
+OUTPUT_DIR: "out_DRIVE_swin/" # 指定输出路径
 MODEL:
   BACKBONE:
     NAME: "D2SwinTransformer"
