--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -43,8 +43,8 @@
             "console": "integratedTerminal",
             "args": [
                 "--config-file",
-                "configs/kvasir_seg/MaskFormer2_R50_bs16_160k.yaml", // resnet
-                // "configs/kvasir_seg/swin/maskformer2_swin_large_IN21k_384_bs16_160k.yaml",  //swin
+                // "configs/kvasir_seg/MaskFormer2_R50_bs16_160k.yaml", // resnet
+                "configs/kvasir_seg/swin/maskformer2_swin_large_IN21k_384_bs16_160k.yaml",  //swin
 
                 "--input", 
                 // "/home/tangwuyang/Dataset/kvasir/Kvasir-SEG/val/images/cju0qkwl35piu0993l0dewei2.jpg", // - val1
@@ -59,7 +59,7 @@
                 // "save_model/2w_b2_resnet/model_0019999.pth",  //resnet, 2w
                 // "save_model/2.5w_b3_resnet/model_0024999.pth",  //resnet, 2.5w
                 // "save_model/2w_b1_swin/model_0019999.pth",  //swin, 2w
-                "out_kvasir_newlabel/model_0004999.pth",  //swin
+                "new_bridge/Swin2/model_0079999.pth",  //swin
             ],
             "env": {
                 "PYTHONPATH": "${workspaceFolder}${pathSeparator}${env:PYTHONPATH}",
@@ -131,7 +131,7 @@
                 // "./test_output/val2.png", 
                 // "./test_output/train1.png",
                 "--opts", "MODEL.WEIGHTS", 
-                "output_DRIVE_swin/model_0004999.pth",
+                "out_DRIVE_swin/model_0009999.pth",
             ],
             "env": {
                 "PYTHONPATH": "${workspaceFolder}${pathSeparator}${env:PYTHONPATH}",
@@ -164,9 +164,10 @@
             "program": "/home/tangwuyang/MINImask2former/train_net.py",
             "console": "integratedTerminal",
             "args": ["--config-file",
-            "configs/Synapse/MaskFormer2_R50_bs16_160k.yaml",  //resnet
+            // "configs/Synapse/MaskFormer2_R50_bs16_160k.yaml",  //resnet
             // "configs/kvasir_seg/MaskFormer2_R50_galerkin.yaml",  //galerkin
-            // "configs/kvasir_seg/swin/maskformer2_swin_large_IN21k_384_bs16_160k.yaml",  //swin
+            // "configs/Synapse/swin/maskformer2_swin_large_IN21k_384_bs16_160k.yaml",  //swin
+            "configs/Synapse/galerkin_trans/galerkin_transformer.yaml",  //galerkin_trans
             "--num-gpus",
             "1",
             "--num-machines",
@@ -188,7 +189,7 @@
                 // "configs/DRIVE/MaskFormer2_R50_galerkin.yaml",  //galerkin
                 "configs/Synapse/swin/maskformer2_swin_large_IN21k_384_bs16_160k.yaml",  //swin
                 "--eval-only", "MODEL.WEIGHTS", 
-                "out_Synapse_swin/10w.pth",
+                "out_Synapse_swin/model_0079999.pth",
             ],
             "env": {
                 "PYTHONPATH": "${workspaceFolder}${pathSeparator}${env:PYTHONPATH}",
@@ -207,14 +208,14 @@
                 "configs/Synapse/swin/maskformer2_swin_large_IN21k_384_bs16_160k.yaml",  //swin
 
                 "--input", 
-                "/home/tangwuyang/Dataset/Synapse/test/images/case0001_slice095.npz",
-                // "/home/tangwuyang/Dataset/Synapse/train/images/case0005_slice070.npz",
+                // "/home/tangwuyang/Dataset/Synapse/test/images/case0001_slice095.npz",
+                "/home/tangwuyang/Dataset/Synapse/train/images/case0005_slice070.npz",
                 "--output", 
                 "./test_output/val0.png", 
                 // "./test_output/val2.png", 
                 // "./test_output/train1.png",
                 "--opts", "MODEL.WEIGHTS", 
-                "out_Synapse_swin/10w.pth",  //swin
+                "out_Synapse_swin/model_0079999.pth",  //swin
             ],
             "env": {
                 "PYTHONPATH": "${workspaceFolder}${pathSeparator}${env:PYTHONPATH}",
