--- a/configs/Synapse/galerkin_trans/galerkin_transformer.yaml
+++ b/configs/Synapse/galerkin_trans/galerkin_transformer.yaml
@@ -5,14 +5,14 @@ MODEL:
     NAME: "D2GalerkinTransformer"
   SWIN:
     EMBED_DIM: 192
-    DEPTHS: [2, 2, 18, 2]
+    DEPTHS: [2, 2, 18, 2] # [2, 2, 18, 2]
     NUM_HEADS: [64, 64, 128, 128] # [6, 12, 24, 48]
     WINDOW_SIZE: 12
     APE: False
     DROP_PATH_RATE: 0.3
     PATCH_NORM: True
     PRETRAIN_IMG_SIZE: 384
-    PATCH_SIZE: 2
+    PATCH_SIZE: 4
   WEIGHTS: "save_model/swin_model/swin_large_patch4_window12_384_22k.pkl"
   PIXEL_MEAN: [123.675, 116.280, 103.530]
   PIXEL_STD: [58.395, 57.120, 57.375]
